# climate-model

./: .editorconfig  .gitignore  README.md  constants.h  meson.build  model.c  opacity-analysis-plot.py  opacity-analysis.c  radiative_transfer.c  thermal_radiation.c  thermal_radiation.h  thermal_radiation_test.c
eddington/: eddington_v2.c  eddington_v2.h
